src/objects/Dental_Practice__c.object
<CustomObject>
    <fields>
        <fullName>Phase_Type__c</fullName>
        <label>Phase Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phase I</fullName>
                </value>
                <value>
                    <fullName>Phase II &apos;A&apos;</fullName>
                </value>
                <value>
                    <fullName>Phase II &apos;B&apos;</fullName>
                </value>
                <value>
                    <fullName>Phase III</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Clean__c</fullName>
        <formula>substitute(
substitute(
  substitute(
    substitute(
      substitute( 
        substitute( Phone__c , &apos;(&apos;, &apos;&apos;) , 
      &apos;)&apos;, &apos;&apos;) ,
    &apos;-&apos;,&apos;&apos;) ,
  &apos; &apos;,&apos;&apos;) ,
&apos;#&apos;,&apos;&apos;),
&apos;.&apos;,&apos;&apos;)</formula>
        <label>Phone Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Office Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placing_Dental_Implants_Desirability__c</fullName>
        <label>Placing Dental Implants Desirability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Extremely Happy</fullName>
                </value>
                <value>
                    <fullName>Happy</fullName>
                </value>
                <value>
                    <fullName>Not so Happy</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t wait to go home</fullName>
                </value>
                <value>
                    <fullName>I don&apos;t offer this service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planned_work_days_current_year__c</fullName>
        <label>Planned work days current year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_Formal_Name__c</fullName>
        <label>Practice Formal Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_Growth_from_Last_Year__c</fullName>
        <label>Practice Growth from Last Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-20% or more</fullName>
                </value>
                <value>
                    <fullName>-19%</fullName>
                </value>
                <value>
                    <fullName>-18%</fullName>
                </value>
                <value>
                    <fullName>-17%</fullName>
                </value>
                <value>
                    <fullName>-16%</fullName>
                </value>
                <value>
                    <fullName>-15%</fullName>
                </value>
                <value>
                    <fullName>-14%</fullName>
                </value>
                <value>
                    <fullName>-13%</fullName>
                </value>
                <value>
                    <fullName>-12%</fullName>
                </value>
                <value>
                    <fullName>-11%</fullName>
                </value>
                <value>
                    <fullName>-10%</fullName>
                </value>
                <value>
                    <fullName>-9%</fullName>
                </value>
                <value>
                    <fullName>-8%</fullName>
                </value>
                <value>
                    <fullName>-7%</fullName>
                </value>
                <value>
                    <fullName>-6%</fullName>
                </value>
                <value>
                    <fullName>-5%</fullName>
                </value>
                <value>
                    <fullName>-4%</fullName>
                </value>
                <value>
                    <fullName>-3%</fullName>
                </value>
                <value>
                    <fullName>-2%</fullName>
                </value>
                <value>
                    <fullName>-1%</fullName>
                </value>
                <value>
                    <fullName>0% growth</fullName>
                </value>
                <value>
                    <fullName>+1%</fullName>
                </value>
                <value>
                    <fullName>+2%</fullName>
                </value>
                <value>
                    <fullName>+3%</fullName>
                </value>
                <value>
                    <fullName>+4%</fullName>
                </value>
                <value>
                    <fullName>+5%</fullName>
                </value>
                <value>
                    <fullName>+6%</fullName>
                </value>
                <value>
                    <fullName>+7%</fullName>
                </value>
                <value>
                    <fullName>+8%</fullName>
                </value>
                <value>
                    <fullName>+9%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Practice_Location__c</fullName>
        <label>Practice Location</label>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Practice_Management_Software__c</fullName>
        <label>Practice Management Software</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dentrix</fullName>
                </value>
                <value>
                    <fullName>SoftDent</fullName>
                </value>
                <value>
                    <fullName>PracticeWorks</fullName>
                </value>
                <value>
                    <fullName>EagleSoft</fullName>
                </value>
                <value>
                    <fullName>Mogo</fullName>
                </value>
                <value>
                    <fullName>CurveDental</fullName>
                </value>
                <value>
                    <fullName>CareStream</fullName>
                </value>
                <value>
                    <fullName>DataCon</fullName>
                </value>
                <value>
                    <fullName>DentiMax</fullName>
                </value>
                <value>
                    <fullName>PlanetDDS</fullName>
                </value>
                <value>
                    <fullName>Exact</fullName>
                </value>
                <value>
                    <fullName>WinDent</fullName>
                </value>
                <value>
                    <fullName>MaxiDent</fullName>
                </value>
                <value>
                    <fullName>iDentalSoft</fullName>
                </value>
                <value>
                    <fullName>OpenDental</fullName>
                </value>
                <value>
                    <fullName>XLDent</fullName>
                </value>
                <value>
                    <fullName>Tracker</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Practice_Owner__c</fullName>
        <label>Practice_Owner(s)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_Performance__c</fullName>
        <label>Practice Performance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Our practice is up</fullName>
                </value>
                <value>
                    <fullName>Our practice is flat</fullName>
                </value>
                <value>
                    <fullName>Our practice is down</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Practice_Status_Modified__c</fullName>
        <description>A Salesforce process should set this field with the date/time of when the Practice Status was last changed.</description>
        <label>Practice Status Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Practice_Status__c</fullName>
        <label>Practice Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                    <default>true</default>
                    <label>Prospect</label>
                </value>
                <value>
                    <fullName>Center Visit</fullName>
                </value>
                <value>
                    <fullName>PSA Executed</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Active (No PSA)</fullName>
                </value>
                <value>
                    <fullName>Inactive (No PSA)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Practice_Type__c</fullName>
        <label>Practice Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Dentistry</fullName>
                </value>
                <value>
                    <fullName>Prosthodontist</fullName>
                </value>
                <value>
                    <fullName>Oral Surgeon</fullName>
                </value>
                <value>
                    <fullName>Periodontist</fullName>
                </value>
                <value>
                    <fullName>Orthodontist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Practice_Website__c</fullName>
        <label>Practice Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Previous_perception_of_CC__c</fullName>
        <label>Previous perception of CC?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>Didn&apos;t know much about ClearChoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <label>Primary Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Name__c</fullName>
        <label>Primary Contact Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Role__c</fullName>
        <label>Primary Contact Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Elements_interested_in__c</fullName>
        <label>Program Elements interested in</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Treatment Assurance Model</fullName>
                </value>
                <value>
                    <fullName>ClearVantage</fullName>
                </value>
                <value>
                    <fullName>ClearWeb</fullName>
                </value>
                <value>
                    <fullName>ClearViewTV</fullName>
                </value>
                <value>
                    <fullName>ClearRefer</fullName>
                </value>
                <value>
                    <fullName>ClearTrain</fullName>
                </value>
                <value>
                    <fullName>ClearStudy</fullName>
                </value>
                <value>
                    <fullName>ClearLeads</fullName>
                </value>
                <value>
                    <fullName>SmileLoc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prospect_Path__c</fullName>
        <label>Prospect Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cold Calling</fullName>
                </value>
                <value>
                    <fullName>Patient in Common</fullName>
                </value>
                <value>
                    <fullName>Vendor Relationships</fullName>
                </value>
                <value>
                    <fullName>Center Staff Contacts</fullName>
                </value>
                <value>
                    <fullName>Colleague</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prosthodontics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prosthodontics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refer_to_this_practice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if our Compliance dept has approved these GP&apos;s for the PP program</description>
        <label>Approved by Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <label>Referred By</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_to_us__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referred to us</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Restoring_Dental_Implants_Desirability__c</fullName>
        <label>Restoring Dental Implants Desirability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Extremely Happy</fullName>
                </value>
                <value>
                    <fullName>Happy</fullName>
                </value>
                <value>
                    <fullName>Not so Happy</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t wait to go home</fullName>
                </value>
                <value>
                    <fullName>I don&apos;t offer this service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Saturday_End__c</fullName>
        <description>Closing time for Saturday</description>
        <label>Saturday End</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>05:00</fullName>
                </value>
                <value>
                    <fullName>05:30</fullName>
                </value>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>06:30</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>07:30</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Saturday_Open__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the practice is open on Saturdays</description>
        <label>Saturday Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Saturday_Start__c</fullName>
        <label>Saturday Start</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>05:00</fullName>
                </value>
                <value>
                    <fullName>05:30</fullName>
                </value>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>06:30</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>07:30</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheduled_ghost_call__c</fullName>
        <label>Scheduled ghost call</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seats_in_the_office__c</fullName>
        <label># Seats in the office</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Email__c</fullName>
        <label>Secondary Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Role__c</fullName>
        <label>Secondary Contact Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact__c</fullName>
        <label>Secondary Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_of_the_TV__c</fullName>
        <label>Serial # of the TV</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_of_the_media_player__c</fullName>
        <label>Serial # of the media player</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Offered__c</fullName>
        <label>Services Offered</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sunday_End__c</fullName>
        <description>Closing time for Sunday</description>
        <label>Sunday End</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>05:00</fullName>
                </value>
                <value>
                    <fullName>05:30</fullName>
                </value>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>06:30</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>07:30</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sunday_Open__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the practice is open on Sundays</description>
        <label>Sunday Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sunday_Start__c</fullName>
        <description>Opening time for Sunday</description>
        <label>Sunday Start</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>05:00</fullName>
                </value>
                <value>
                    <fullName>05:30</fullName>
                </value>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>06:30</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>07:30</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teams_Communication_Skills__c</fullName>
        <label>Teams Communication Skills</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teams_Overall_Performace__c</fullName>
        <label>Teams Overall Performace</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teams_greatest_challenge_to_work__c</fullName>
        <label>Teams greatest challenge to work</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teams_greatest_obstacle__c</fullName>
        <label>Three greatest obstacles in the practice</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teeth_Whitening_Desirability__c</fullName>
        <label>Teeth Whitening Desirability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Extremely Happy</fullName>
                </value>
                <value>
                    <fullName>Happy</fullName>
                </value>
                <value>
                    <fullName>Not so Happy</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t wait to go home</fullName>
                </value>
                <value>
                    <fullName>I don&apos;t offer this service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teeth_Whitening__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Teeth Whitening</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Telephone_Sales_training_description__c</fullName>
        <label>Telephone/Sales training description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Testing_a_new_field__c</fullName>
        <label>Testing a new field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>